# jps2sm

./: .coveragerc  .gitignore  COPYING  README.md  bulkinvite.py  deletetorrent.py  jps2sm.cfg.example  jps2sm.py  jpsupload.php  requirements.txt  requirements_build.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  testscrape.py  utils.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: tests.yml
jps2sm/: __init__.py  batch.py  constants.py  get_data.py  jps2sm.py  mediainfo.py  myloginsession.py  prepare_data.py  save_data.py  upload_data.py  utils.py  validation.py
modules/: constants.py  mediainfo.py  myloginsession.py  utils.py  validation.py
old-tests/: README  group-155760-exclude-audioformat  refreshtests.sh
packaging/: README
packaging/linux/: README
tests/: arg-check-batchuser-no-end-page  batch-group-data  batchuser-194033-zilla-pages-15-16  group-111284  group-251299-torrent-358233  group-28034-music-in-video-group  group-321079-torrent-472015  group-edit-page-121206  group-edit-page-176329  group-page-120274  group-page-173844  group-page-212853  group-page-219216  group-page-369725-bad-va  jps2sm.tests.cfg  refreshtests.sh  test_get_artist.py  test_get_batch_group_data.py  test_get_batch_jps_group_torrent_ids.py  test_get_group_data.py  test_get_group_description_bbcode.py  test_get_release_data.py  test_get_video_fields_from_mediainfo.py  test_mediainfo_validate_codec.py  test_mediainfo_validate_container.py  test_prepare_torrent.py  test_validate_jps_bitrate.py  test_validate_jps_video_data.py  tests.sh  user-page-snatched-userid-1  user-page-snatched-userid-1-page-1  user-page-snatched-userid-1-page-2
(+5 files in other folders)
