[metadata]
name = jps2sm
version = attr: jps2sm.__version__
author = DamonJavert
author_email = damonjavert@protonmail.com
description = Transfer data from JPS to SM
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/damonjavert/jps2sm
project_urls =
    Bug Tracker = https://github.com/damonjavert/jps2sm/issues
    repository = https://github.com/damonjavert/jps2sm
license = GPLv3
license_file = COPYING
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
[options.entry_points]
console_scripts =
    jps2sm = jps2sm.jps2sm:main
[options]
packages =
    jps2sm
install_requires =
    beautifulsoup4>=4.8
    bs4>=0.0.1
    certifi>=2019.9
    chardet>=3.0
    html5lib>=1.0
    idna>=2.8
    pytz>=2019.3
    requests>=2.22
    six>=1.12
    soupsieve>=1.9
    sqlparse>=0.3
    urllib3>=1.25
    webencodings>=0.5
    pymediainfo>=4.1
    torrent-parser>=0.3
    humanfriendly>=4.18
    pyunpack>=0.2
    patool>=1.12
    bencoding>=0.2
    requestsloginsession>=0.6
    datasize>=1.0
    loguru>=0.6
python_requires = >=3.8
zip_safe = no
